--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.28.1",
     "sweetalert2": "^11.15.10"
   },
