--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
