--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.1.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-awesome-stars-rating": "^0.16.2",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
