--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.4.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.28.1",
+    "recharts": "^2.15.0",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
