--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-awesome-stars-rating": "^0.16.2",
@@ -27,7 +28,8 @@
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.28.1",
     "recharts": "^2.15.0",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.15.10",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
