--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-awesome-stars-rating": "^0.16.2",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
