--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-minimal-pie-chart": "^9.1.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.28.1",
     "recharts": "^2.15.0",
