--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.1",
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "lottie-react": "^2.4.0",
